# EM-ulator

./: Makefile  README.md  pyproject.toml  server.py
em_ulator/: __init__.py  config.py  models.py  worker.py
em_ulator/blueprints/: __init__.py
em_ulator/blueprints/home/: views.py
em_ulator/static/: #style.css#  .#style.css  style.css
em_ulator/tasks/: worker.py
em_ulator/templates/: base.html  game.html  index.html
