[tool.poetry]
name = "em-ulator"
version = "0.1.0"
description = ""
authors = ["Duncan Cook <duncan.cook@theletterd.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
ipython = "^8.17.2"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
